Fixed issue, line has been missed.

--- a/information/meetings/2023-2024.md
+++ b/information/meetings/2023-2024.md
@@ -1,4 +1,4 @@
-# 2023 - 2024
+# 2023-2024
 
 ## Semester One
 
@@ -33,3 +33,4 @@
 | 20/03/24 | - Apex Legends hacking<br>- AMA                                                    | Jamie O'Hare<br>Mikey, Kyle         |        |
 | 27/03/24 | from Manuscripts to Malware: An Investigation of the British Library's Cyberattack | Sarah                               |        |
 | 17/04/24 | Digital Forensics Seizure of evidence workshop                                     | Ian Ferguson                        |        |
+| 24/04/24 | AGM 2024                                                                           | N/A                                 |        |
