Added social links to speakers where known.

--- a/information/meetings/2023-2024.md
+++ b/information/meetings/2023-2024.md
@@ -2,35 +2,35 @@
 
 ## Semester One
 
-| Date     | Title                                                            | Speakers                      | Slides |
-| -------- | ---------------------------------------------------------------- | ----------------------------- | ------ |
-| 20/09/23 | The Internship                                                   | ?                             |        |
-| 27/09/23 | Surviving Ethical Hacking                                        | ?                             |        |
-| 04/10/23 | ?<br>?<br>?                                                      | Luke<br>Noah<br>Ewan          |        |
-| 11/10/23 | Vendors... Or Attack Vectors                                     | Richard Hollis                |        |
-| 18/10/23 | Social                                                           | N/A                           |        |
-| 25/10/23 | Cyber "horror" film making                                       | N/A                           |        |
-| 01/11/23 | Networking in VMware Workstation                                 | AG                            |        |
-| 08/11/23 | CV Workshop                                                      | Andrew Cunningham             |        |
-| 15/11/23 | Hackers & Heroes Workshop                                        | Sarah                         |        |
-| 22/11/23 | Protecting the Penguin: Linux Security Monitoring with eBPF      | Sam                           |        |
-| 29/11/23 | What your family thinks you do: an analysis of Hollywood hacking | Isaac                         |        |
-| 06/12/23 | Christmas Dinner                                                 | N/A                           |        |
-| 13/12/23 | Year in Review                                                   | Dan<br>Ross<br>Lyra<br>Thomas |        |
+| Date     | Title                                                            | Speakers                                                                                                                                           | Slides |
+| -------- | ---------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- | ------ |
+| 20/09/23 | The Internship                                                   | ?                                                                                                                                                  |        |
+| 27/09/23 | Surviving Ethical Hacking                                        | ?                                                                                                                                                  |        |
+| 04/10/23 | - ?<br>- ?<br>- ?                                                | - Luke<br>- Noah<br>- [@ewantaylor1](https://twitter.com/ewantaylor1)                                                                              |        |
+| 11/10/23 | Vendors... Or Attack Vectors                                     | Richard Hollis                                                                                                                                     |        |
+| 18/10/23 | Social                                                           | N/A                                                                                                                                                |        |
+| 25/10/23 | Cyber "horror" film making                                       | N/A                                                                                                                                                |        |
+| 01/11/23 | Networking in VMware Workstation                                 | AG                                                                                                                                                 |        |
+| 08/11/23 | CV Workshop                                                      | Andrew Cunningham                                                                                                                                  |        |
+| 15/11/23 | Hackers & Heroes Workshop                                        | [@Casual_Unknown](https://twitter.com/Casual_Unknown)                                                                                              |        |
+| 22/11/23 | Protecting the Penguin: Linux Security Monitoring with eBPF      | Sam                                                                                                                                                |        |
+| 29/11/23 | What your family thinks you do: an analysis of Hollywood hacking | [@IBRice101](https://twitter.com/IBRice101)                                                                                                        |        |
+| 06/12/23 | Christmas Dinner                                                 | N/A                                                                                                                                                |        |
+| 13/12/23 | Year in Review                                                   | Dan, [@ChefCoin](https://twitter.com/ChefCoin), [@lyraontwiter](https://twitter.com/lyraontwiter), [@ThomasRSinc](https://twitter.com/ThomasRSinc) |        |
 
 ## Semester Two
 
-| Date     | Title                                                                              | Speaker                             | Slides |
-| -------- | ---------------------------------------------------------------------------------- | ----------------------------------- | ------ |
-| 24/01/24 | Ethernet Cable Workshop                                                            | Adam                                |        |
-| 31/01/24 | - Intro to Security<br>- DRM & Anti-Piracy                                         | Jack Laundon<br>Ciaran              |        |
-| 07/02/24 | Images, Bugs and the NSO Group                                                     | Harry Lockyer                       |        |
-| 14/02/24 | Malware Development 101 v2.0 with Allan                                            | AG                                  |        |
-| 21/02/24 | OT Risk consulting, Where cyber security gets risky                                | Callum Baston                       |        |
-| 28/02/24 | OT, The student perspective                                                        | Suzie                               |        |
-| 06/03/24 | Securi-Tay 2024 Behind The Scenes!                                                 | Adam<br>Tristan<br>Callum<br>Connor |        |
-| 13/03/24 | Would you let the Police connect to your netowork?                                 | Declan Doyle                        |        |
-| 20/03/24 | - Apex Legends hacking<br>- AMA                                                    | Jamie O'Hare<br>Mikey, Kyle         |        |
-| 27/03/24 | from Manuscripts to Malware: An Investigation of the British Library's Cyberattack | Sarah                               |        |
-| 17/04/24 | Digital Forensics Seizure of evidence workshop                                     | Ian Ferguson                        |        |
-| 24/04/24 | AGM 2024                                                                           | N/A                                 |        |
+| Date     | Title                                                                              | Speaker                                                                                                                                                                                        | Slides |
+| -------- | ---------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ |
+| 24/01/24 | Ethernet Cable Workshop                                                            | [@AdamBoard1](https://twitter.com/AdamBoard1)                                                                                                                                                  |        |
+| 31/01/24 | - Intro to Security<br>- DRM & Anti-Piracy                                         | - Jack Laundon<br>- Ciaran                                                                                                                                                                     |        |
+| 07/02/24 | Images, Bugs and the NSO Group                                                     | Harry Lockyer                                                                                                                                                                                  |        |
+| 14/02/24 | Malware Development 101 v2.0 with Allan                                            | AG                                                                                                                                                                                             |        |
+| 21/02/24 | OT Risk consulting, Where cyber security gets risky                                | Callum Baston                                                                                                                                                                                  |        |
+| 28/02/24 | OT, The student perspective                                                        | Suzie                                                                                                                                                                                          |        |
+| 06/03/24 | Securi-Tay 2024 Behind The Scenes!                                                 | [@AdamBoard1](https://twitter.com/AdamBoard1), [@tristVerr](https://twitter.com/tristVerr), [@itsWavey_](https://twitter.com/itsWavey_), [@HeySmithHere](https://twitter.com/HeySmithHere)<br> |        |
+| 13/03/24 | Would you let the Police connect to your netowork?                                 | [@walkmiltion](https://twitter.com/walkmilton)                                                                                                                                                 |        |
+| 20/03/24 | - Apex Legends hacking<br>- AMA                                                    | - [@TheHairyJ](https://twitter.com/TheHairyJ)<br>- Mikey, Kyle                                                                                                                                 |        |
+| 27/03/24 | From Manuscripts to Malware: An Investigation of the British Library's Cyberattack | [@EncryptedSarah](https://twitter.com/EncryptedSarah)                                                                                                                                          |        |
+| 17/04/24 | Digital Forensics Seizure of evidence workshop                                     | Ian Ferguson                                                                                                                                                                                   |        |
+| 24/04/24 | AGM 2024                                                                           | N/A                                                                                                                                                                                            |        |
