Missed AG's link. Corrected.

--- a/information/meetings/2023-2024.md
+++ b/information/meetings/2023-2024.md
@@ -10,7 +10,7 @@
 | 11/10/23 | Vendors... Or Attack Vectors                                     | Richard Hollis                                                                                                                                     |        |
 | 18/10/23 | Social                                                           | N/A                                                                                                                                                |        |
 | 25/10/23 | Cyber "horror" film making                                       | N/A                                                                                                                                                |        |
-| 01/11/23 | Networking in VMware Workstation                                 | AG                                                                                                                                                 |        |
+| 01/11/23 | Networking in VMware Workstation                                 | [@MuirlandOracle](https://twitter.com/MuirlandOracle)                                                                                              |        |
 | 08/11/23 | CV Workshop                                                      | Andrew Cunningham                                                                                                                                  |        |
 | 15/11/23 | Hackers & Heroes Workshop                                        | [@Casual_Unknown](https://twitter.com/Casual_Unknown)                                                                                              |        |
 | 22/11/23 | Protecting the Penguin: Linux Security Monitoring with eBPF      | Sam                                                                                                                                                |        |
@@ -25,7 +25,7 @@
 | 24/01/24 | Ethernet Cable Workshop                                                            | [@AdamBoard1](https://twitter.com/AdamBoard1)                                                                                                                                                  |        |
 | 31/01/24 | - Intro to Security<br>- DRM & Anti-Piracy                                         | - Jack Laundon<br>- Ciaran                                                                                                                                                                     |        |
 | 07/02/24 | Images, Bugs and the NSO Group                                                     | Harry Lockyer                                                                                                                                                                                  |        |
-| 14/02/24 | Malware Development 101 v2.0 with Allan                                            | AG                                                                                                                                                                                             |        |
+| 14/02/24 | Malware Development 101 v2.0 with Allan                                            | [@MuirlandOracle](https://twitter.com/MuirlandOracle)                                                                                                                                          |        |
 | 21/02/24 | OT Risk consulting, Where cyber security gets risky                                | Callum Baston                                                                                                                                                                                  |        |
 | 28/02/24 | OT, The student perspective                                                        | Suzie                                                                                                                                                                                          |        |
 | 06/03/24 | Securi-Tay 2024 Behind The Scenes!                                                 | [@AdamBoard1](https://twitter.com/AdamBoard1), [@tristVerr](https://twitter.com/tristVerr), [@itsWavey_](https://twitter.com/itsWavey_), [@HeySmithHere](https://twitter.com/HeySmithHere)<br> |        |
