Appended with Tristan's talk.

--- a/information/meetings/2023-2024.md
+++ b/information/meetings/2023-2024.md
@@ -34,3 +34,4 @@
 | 27/03/24 | From Manuscripts to Malware: An Investigation of the British Library's Cyberattack | [@EncryptedSarah](https://twitter.com/EncryptedSarah)                                                                                                                                          |        |
 | 17/04/24 | Digital Forensics Seizure of evidence workshop                                     | Ian Ferguson                                                                                                                                                                                   |        |
 | 24/04/24 | AGM 2024                                                                           | N/A                                                                                                                                                                                            |        |
+| 01/05/24 | Cybercrime as a Service                                                            | [@tristVerr](https://twitter.com/tristVerr)                                                                                                                                                    |        |
