Added initial entry and title for end of year social.
Title will be amended as required, when official title is published by committee.

--- a/information/meetings/2023-2024.md
+++ b/information/meetings/2023-2024.md
@@ -35,3 +35,4 @@
 | 17/04/24 | Digital Forensics Seizure of evidence workshop                                     | Ian Ferguson                                                                                                                                                                                   |        |
 | 24/04/24 | AGM 2024                                                                           | N/A                                                                                                                                                                                            |        |
 | 01/05/24 | Cybercrime as a Service                                                            | [@tristVerr](https://twitter.com/tristVerr)                                                                                                                                                    |        |
+| 08/05/25 | End of year social                                                                 | N/A                                                                                                                                                                                            |        |
